# mini-blockchain-rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
core/: Cargo.toml  README.md
core/src/: accounts.rs  constants.rs  errors.rs  instructions.rs  keys.rs  ledger.rs  lib.rs  serialization.rs  transactions.rs  utils.rs
core/tests/: integration_test.rs
src/: accounts.rs  errors.rs  instructions.rs  keys.rs  ledger.rs  lib.rs  main.rs  serialization.rs  transactions.rs  utils.rs
tests/: integration_test.rs
